<resources>
    <!-- General -->
    <string name="app_name">Lavalarm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!--
        ****************
        ** CoreScreen **
        ****************
    -->
    <!-- NextAlarmCloud -->
    <string name="no_active_alarms">No Active Alarms</string>
    <!-- LavaFloatingActionButton -->
    <string name="lava_fab_create_alarm_cd">Create new Alarm</string>
    <!-- VolcanoNavigationBar -->
    <string name="nav_alarm">Alarm</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_alarm_cd">Navigate to Alarm List Screen</string>
    <string name="nav_settings_cd">Navigate to Settings Screen</string>

    <!--
        *********************
        ** AlarmListScreen **
        *********************
    -->
    <!-- AlarmCard -->
    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="not_scheduled">Not scheduled</string>
    <string name="snooze_indicator">Snoozed until -</string>
    <!-- AlarmCardMenu -->
    <string name="menu_delete">Delete</string>
    <!-- NoAlarmsCard -->
    <string name="no_alarms">No Alarms</string>

    <!--
        ***************************
        ** AlarmCreateEditScreen **
        ***************************
    -->
    <!-- AlarmCreateEditScreen -->
    <string name="alarm_name_placeholder">Alarm name</string>
    <string name="repeating_alarm_date_label">Every:</string>
    <string name="repeating_alarm_every_day">Every day</string>
    <string name="section_alert">Alert</string>
    <string name="alarm_create_edit_alarm_sound_label">Sound</string>
    <string name="alarm_create_edit_alarm_vibration_label">Vibration</string>
    <string name="section_snooze">Snooze</string>
    <string name="alarm_create_edit_alarm_snooze_duration">Duration</string>
    <string name="snooze_minutes">minutes</string>
    <!-- AlarmTimePickerDialog -->
    <string name="select_time">Select time</string>
    <!-- AlarmCreationScreen -->
    <string name="alarm_creation_screen_title">Create Alarm</string>
    <!-- AlarmEditScreen -->
    <string name="alarm_edit_screen_title">Edit Alarm</string>
    <!-- Validation -->
    <string name="alarm_name_err_snackbar">Alarm name improperly formatted</string>
    <string name="alarm_name_too_long_err_snackbar">Alarm name too long</string>
    <string name="alarm_datetime_in_past_err_snackbar">Alarms must be set in the future</string>
    <string name="alarm_name_illegal_character_err_inline">Only letters, numbers, spaces allowed</string>
    <string name="alarm_name_only_whitespace_err_inline">Cannot just be spaces</string>
    <!-- Snackbar -->
    <string name="snackbar_alarm_scheduled">Alarm scheduled for %1$s from now</string>

    <!--
        **************************
        ** RingtonePickerScreen **
        **************************
    -->
    <string name="ringtone_picker_screen_title">Select Alarm Sound</string>
    <string name="ringtone_picker_alarm_sounds_label">Sounds</string>

    <!--
        ********************
        ** SettingsScreen **
        ********************
    -->
    <string name="settings_general">General Settings</string>
    <string name="settings_alarm_defaults">Alarm Defaults</string>

    <!--
        ***************************
        ** GeneralSettingsScreen **
        ***************************
    -->
    <string name="general_settings_time_label">Time</string>
    <string name="general_settings_time_display">Time Display</string>

    <!--
        *************************
        ** AlarmDefaultsScreen **
        *************************
    -->
    <string name="alarm_defaults_important_notice_header">Important</string>
    <string name="alarm_defaults_important_notice_body">These are the default settings for newly
        created Alarms. Modifying these settings will not affect previously created Alarms.</string>

    <!--
        **************************
        ** SnoozeDurationDialog **
        **************************
    -->
    <string name="snooze_duration">Snooze Duration</string>

    <!--
        **************************
        ** UnsavedChangesDialog **
        **************************
    -->
    <string name="unsaved_changes_dialog_title">Unsaved Changes</string>
    <string name="unsaved_changes_dialog_body">There are unsaved changes on this screen. If you
        leave without saving, your changes will be lost. Do you want to leave without saving?</string>
    <string name="unsaved_changes_dialog_leave">Leave</string>
    <string name="unsaved_changes_dialog_stay">Stay</string>

    <!--
        ************************
        ** Alarm Notification **
        ************************
    -->
    <string name="snooze_alarm">Snooze</string>
    <string name="dismiss_alarm">Dismiss</string>
    <string name="hold_to_snooze">Hold to Snooze</string>
    <string name="hold_to_dismiss">Hold to Dismiss</string>
    <string name="default_alarm_name">Alarm</string>
    <string name="default_alarm_date">Today</string>
    <string name="default_alarm_time">Now</string>

    <!--
        *****************************
        ** Post Alarm Confirmation **
        *****************************
    -->
    <string name="post_alarm_confirmation_snooze">Alarm Snoozed</string>
    <string name="post_alarm_confirmation_dismiss">Alarm Dismissed</string>
    <string name="post_alarm_confirmation_min">min</string>

    <!--
        **********************
        ** DaysHoursMinutes **
        **********************
    -->
    <string name="day_abbreviation">d</string>
    <string name="hour_abbreviation">h</string>
    <string name="minute_abbreviation">m</string>
    <string name="less_than_symbol">&lt;</string>

    <!--
        *****************
        ** Permissions **
        *****************
    -->
    <string name="permission_channel_alarm_name">Alarm</string>
    <string name="permission_channel_alarm_desc">Required for Alarms</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_request">Request</string>
    <string name="permission_open_system_settings">System Settings</string>
    <string name="permission_missing_notifications_system_dialog">The Notification Permission is
        required to use Alarms. Without it you will not be able to create or edit Alarms,
        &lt;i&gt;&lt;u&gt;and any Alarms that you previously created will not go off&lt;/u&gt;&lt;/i&gt;.
        &lt;br&gt;&lt;br&gt;
        Please request the Notification Permission by pressing the \"Request\" button below,
        and then selecting \"Allow\" on the following popup.</string>
    <string name="permission_missing_notifications_system_settings">The Notification Permission is
        required to use Alarms. Without it you will not be able to create or edit Alarms,
        &lt;i&gt;&lt;u&gt;and any Alarms that you previously created will not go off&lt;/u&gt;&lt;/i&gt;.
        &lt;br&gt;&lt;br&gt;
        To use Alarms, you must manually accept the Permission in the System Settings.
        To do so, press the \"System Settings\" button below, then navigate to \"Permissions\"
        &gt; \"Notifications\" and enable \"All Lavalarm notifications\". Then on the same screen,
        ensure that the \"Alarm\" Notification is also enabled.</string>
    <string name="permission_missing_alarm_system_settings">The Alarms &amp; Reminders Permission is
        required to use Alarms. Without it you will not be able to create or edit Alarms,
        &lt;i&gt;&lt;u&gt;and any Alarms that you previously created will not go off&lt;/u&gt;&lt;/i&gt;.
        &lt;br&gt;&lt;br&gt;
        To use Alarms, you must manually accept the Permission in the System Settings.
        To do so, press the \"System Settings\" button below, then enable the Permission on the
        following screen.</string>

    <!--
        ***************************
        ** Notification Settings **
        ***************************
    -->
    <string name="notification_required">Notifications Required</string>
    <string name="notification_open_notification_settings">Notification Settings</string>
    <string name="notification_missing_alarm_system_settings">Alarm Notifications are required to
        use Alarms. Without enabling them you will not be able to create or edit Alarms,
        &lt;i&gt;&lt;u&gt;and any Alarms that you previously created will not go off&lt;/u&gt;&lt;/i&gt;.
        &lt;br&gt;&lt;br&gt;
        To use Alarms, you must manually enable Alarm Notifications in the System Settings.
        To do so, press the \"Notification Settings\" button below, then toggle \"Alarm\"
        Notifications on.</string>
</resources>